tasks_code/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: appropriate/curl
        command: ["/bin/sh", "-c", "while true; do sleep 30; done"]
        ports:
        - containerPort: 8080
